fix Graphic bug in minimap